kubernetes manifest/demo1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-1-app
  template:
    metadata:
      labels:
        app: demo-1-app
        version: v1
    spec:
      containers:
        - name: demo-1-app
          image: noviantoro/demo-istio1:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: demo-1-app
spec:
  selector:
    app: demo-1-app
  ports:
    - port: 8080
      targetPort: 8080
